<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="4dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:src="@drawable/remove" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_criar"
        android:layout_gravity="start"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <EditText
            android:id="@+id/editTextNameSala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/hint_nameSala"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="14sp"
            android:maxLength="12"/>

        <Spinner
            android:id="@+id/spinnerMaxSala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_maxSala"
            android:spinnerMode="dropdown"
            android:drawSelectorOnTop="true"
            android:entries="@array/array1"
            android:padding="10dp">
        </Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/btnCriarSala2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_criar"
        android:backgroundTint="@color/sub_danger"
        android:textColor="@color/white"/>

</LinearLayout>